force-app/main/default/objects/Status_History__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <type>MasterDetail</type>
    <referenceTo>Grant_Application__c</referenceTo>
    <relationshipName>StatusHistories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>