force-app/main/default/objects/Status_History__c/fields/Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Changed_By__c</fullName>
    <label>Changed By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>StatusHistoryChanges</relationshipName>
</CustomField>