force-app/main/default/objects/Status_History__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>